Add YAML support